# InstallerCreator

./: CMakeLists.txt
Common/: Icon.cpp
Installer/: CMakeLists.txt
InstallerCreator/: CMakeLists.txt
Uninstaller/: CMakeLists.txt
